--- a/style.css
+++ b/style.css
@@ -9,12 +9,11 @@ body{
     margin-top: 60px;
     margin-left: 200px;
 }
-
-.containers{
+.ncontainers{
     background-color: skyblue;
     padding-left: 30px;
-    height: 600px;
-    width: 400px;
+    height: 400px;
+    width: 350px;
     border-radius: 10%;
     border: 2px wheat solid;
 }
@@ -25,49 +24,23 @@ h1{
     padding-right:20px ;
 }
 
-#p1{
+#n1{
     text-align: center;
-    padding-right: 80px;
+    padding-right: 40px;
     color: rgb(47, 43, 43);
 }
-.full-name{
-    padding-top: 20px;
-}
 .username{
-    padding-top: 20px;
-}
-.email{
     padding-top: 20px;
 }
 .password{
     padding-top: 20px;
 }
-.cpassword{
-    padding-top: 20px;
-}
-.check{
-    padding-top: 20px;
-}
 .btn{
     padding-top: 35px;
     text-align: center;
-    padding-right: 30px;
+    padding-right: 40px;
 }
-.already-mem{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 20px;
-}
-#i107{
-    text-decoration: none;
-    color: purple;
-}
-#i109{
-    text-decoration: none;
-    color: purple;
-}
-#i108{
+#n108{
     height: 40px;
     width: 300px;
     border-top-left-radius: 20px;
@@ -80,35 +53,14 @@ h1{
     background-color: brown;
     border: none;
 }
-#i101{
+#n102{
     background-color: skyblue;
     border: none;
     border-bottom: 2px purple solid;
     width: 275px;
     padding-top: 5px;
 }
-#i102{
-    background-color: skyblue;
-    border: none;
-    border-bottom: 2px purple solid;
-    width: 275px;
-    padding-top: 5px;
-}
-#i103{
-    background-color: skyblue;
-    border: none;
-    border-bottom: 2px purple solid;
-    width: 275px;
-    padding-top: 5px;
-}
-#i104{
-    background-color: skyblue;
-    border: none;
-    border-bottom: 2px purple solid;
-    width: 275px;
-    padding-top: 5px;
-}
-#i105{
+#n104{
     background-color: skyblue;
     border: none;
     border-bottom: 2px purple solid;
